# studiobrain-model-manager

./: .gitignore  Dockerfile  README.md  models.example.yaml  pyproject.toml
.github/workflows/: ci.yml
studiobrain_model_manager/: __init__.py  config.py  litellm_registration.py  model_manager.py  registry.py  server.py  vram_monitor.py
studiobrain_model_manager/processors/: __init__.py  base.py
studiobrain_model_manager/processors/audio/: __init__.py
studiobrain_model_manager/processors/image/: __init__.py  blip2.py  florence2.py  ram.py
studiobrain_model_manager/processors/text/: __init__.py
studiobrain_model_manager/processors/vector/: __init__.py  embedding_service.py
